returned letting-spacing to design spec and added the correct font-family

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,5 +2,4 @@
 
 body {
   @apply bg-slate-300;
-  font-family: Arial, Helvetica, sans-serif;
 }
